--- a/index.html
+++ b/index.html
@@ -1,45 +1,51 @@
 <!DOCTYPE html>
+<!-- saved from url=(0030)https://static.iohk.io/fluid2/ -->
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Speech API</title>
-  </head>
-  <body>
-    <video controls autoplay src="./bunny.mp4"></video>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
+    <title>WebGL Fluid Experiment</title>
+
+    <meta
+      id="viewport"
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+
+    <script src="./OdEhsZOwKZ_TWTLS_B6UqmQNGis.js"></script>
+    <script type="text/javascript" src="./jquery.js"></script>
     <script>
-      if (annyang) {
-        var commands = {
-          play: function () {
-            videoActions("play");
-          },
-          stop: function () {
-            videoActions("stop");
-          },
-          pause: function () {
-            videoActions("pause");
-          },
-        };
-
-        annyang.addCommands(commands);
-
-        annyang.start({ autoRestart: true, continuous: false });
-      }
-
-      function videoActions(action) {
-        var video = document.querySelector("video");
-        if (action == "play") {
-          video.play();
-        } else if (action == "pause") {
-          video.pause();
-        } else if (action == "stop") {
-          video.pause();
-          document.querySelector("video").currentTime = 0;
-        }
-      }
+      jQuery.getScript("./GPUFluid-1.3.js", function (data, textStatus, jqxhr) {
+        IOHP2();
+      });
     </script>
+
+    <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+      }
+      #content {
+        background: #000000;
+        width: 100%;
+        height: 100%;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+  <body cz-shortcut-listen="true" style="margin: 0px; overflow: hidden">
+    <div id="app"></div>
   </body>
 </html>
