--- a/index.html
+++ b/index.html
@@ -1,51 +1,147 @@
 <!DOCTYPE html>
-<!-- saved from url=(0030)https://static.iohk.io/fluid2/ -->
 <html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
-    <title>WebGL Fluid Experiment</title>
-
-    <meta
-      id="viewport"
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-
-    <script src="./OdEhsZOwKZ_TWTLS_B6UqmQNGis.js"></script>
-    <script type="text/javascript" src="./jquery.js"></script>
-    <script>
-      jQuery.getScript("./GPUFluid-1.3.js", function (data, textStatus, jqxhr) {
-        IOHP2();
-      });
-    </script>
-
-    <style>
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        overflow: hidden;
-      }
-      #content {
-        background: #000000;
-        width: 100%;
-        height: 100%;
-        -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        cursor: pointer;
-      }
-    </style>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Website</title>
   </head>
-  <body cz-shortcut-listen="true" style="margin: 0px; overflow: hidden">
-    <div id="app"></div>
+  <body>
+    HELLO
+
+    <script>
+      var SCRIPT1 = "./script1.js"; //or const SCRIPT1 = function() {  //YOUR SCRIPT  }
+      var SCRIPT2 = "./script2.js"; //or const SCRIPT2 = function() { //YOUR SCRIPT}
+      var CLIENT_PREFERNECES_JSON = "./CLIENT_PREFERNECES.json";
+
+      var DAYS = ["MON", "TUE", "WED", "THU", "FRI", "SAT", "SUN"];
+      var REQUEST_TRY_COUNT = 3;
+
+      function sendRequest(url, callBack) {
+        if ("fetch" in window && "Promise" in window) {
+          fetch(url, {
+            cache: "no-cache",
+          })
+            .then(function (response) {
+              return response.json();
+            })
+            .then(function (result) {
+              callBack(JSON.stringify(result));
+            })
+            .catch(function (error) {
+              callBack(null, error);
+            });
+        } else {
+          var httpRequest = new XMLHttpRequest();
+          try {
+            httpRequest.onreadystatechange = function requestHandler() {
+              if (httpRequest.readyState === XMLHttpRequest.DONE) {
+                if (httpRequest.status === 200) {
+                  callBack(httpRequest.response);
+                } else {
+                  callBack(null);
+                }
+              }
+            };
+          } catch (e) {
+            if (REQUEST_TRY_COUNT-- > 0) {
+              sendRequest(url, callBack);
+            }
+          }
+          httpRequest.open("GET", url, true);
+          httpRequest.setRequestHeader("Access-Control-Allow-Origin", "*");
+          httpRequest.setRequestHeader("Cache-Control", "no-cache");
+          httpRequest.send();
+        }
+      }
+
+      function runScript(s) {
+        if (typeof s === "string") {
+          var script = document.createElement("script");
+          script.src = s;
+          document.getElementsByTagName("head")[0].appendChild(script);
+        } else {
+          s();
+        }
+      }
+
+      function getCurrentTime(callBack) {
+        REQUEST_TRY_COUNT = 3;
+        sendRequest("https://worldtimeapi.org/api/timezone/america/new_york", function (response) {
+          if (response) {
+            var responseObj = JSON.parse(response);
+            callBack({
+              day: DAYS[parseInt(responseObj.day_of_week, 10) - 1],
+              hour: parseInt(responseObj.datetime.split("T")[1].split(":")[0], 10),
+              minute: parseInt(responseObj.datetime.split("T")[1].split(":")[1], 10),
+            });
+          } else {
+            //For Old and Obsolete browsers, or incase of an issue in internet time API:
+            //Old browsers requires you to adjust your PC time from the internet. but time is in GMT.
+            //In that case, we'll just convert from GMT to EST.
+            var date = new Date();
+            var dateDaylightStart = new Date("March 14, 2021");
+            var dateDaylightEnd = new Date("November 7, 2021");
+
+            var offset = date.getTimezoneOffset() / 60;
+
+            if (date >= dateDaylightStart && date < dateDaylightEnd) {
+              //Nothing
+            } else {
+              offset += 1;
+            }
+            var minutes = date.getMinutes();
+            var hours = (date.getHours() + offset - 4) % 24;
+            var dayOffset = 0;
+            if (date.getHours() + offset - 4 < 0) {
+              dayOffset = 1;
+            } else if (date.getHours() + offset - 4 >= 24) {
+              dayOffset = -1;
+            }
+            callBack({
+              day: DAYS[new Date().getDay() - 1 - dayOffset],
+              hour: hours,
+              minute: minutes,
+            });
+          }
+        });
+      }
+      function getClientPreferneces(currentTime) {
+        var hour = currentTime.hour;
+        var minute = currentTime.minute;
+        var time = new Date("01/01/2021 " + hour + ":" + minute);
+        var currentDay = currentTime.day;
+        REQUEST_TRY_COUNT = 3;
+        sendRequest(CLIENT_PREFERNECES_JSON, function (response) {
+          if (response) {
+            var responseObj = JSON.parse(response);
+            var prefTime = responseObj.activeTime[currentDay] || [];
+            var timeInBetween = false;
+            for (var i = 0; i < prefTime.length; i++) {
+              var t = prefTime[i];
+              var from = new Date("01/01/2021 " + t.FROM);
+              var to = new Date("01/01/2021 " + t.TO);
+              if ((time >= from && time < to) || (from > to && time > from) || (from > to && time < to)) {
+                timeInBetween = true;
+                break;
+              }
+            }
+            if (timeInBetween) {
+              runScript(SCRIPT1);
+            } else {
+              runScript(SCRIPT2);
+            }
+          } else {
+            runScript(SCRIPT2);
+          }
+        });
+      }
+
+      function runScriptsConditionally() {
+        getCurrentTime(getClientPreferneces);
+      }
+
+      runScriptsConditionally(getClientPreferneces);
+    </script>
   </body>
 </html>
