--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
       .words-container {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-around;
         margin-top: 8rem;
       }
