--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             `;
             window.print();
 
-            location.reload();
+            // location.reload();
           }
         } else {
           alert("e5tar 7aga ya zngy.");
