--- a/index.html
+++ b/index.html
@@ -1,140 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-    <title>Abod</title>
-
-    <style>
-      * {
-        font-family: "Roboto", sans-serif;
-      }
-      .container {
-        max-width: 1200px;
-        margin: auto;
-      }
-
-      .title {
-        text-align: center;
-      }
-      .title h1 {
-        text-align: center;
-      }
-      .title p {
-        color: red;
-      }
-
-      .words-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        margin-top: 8rem;
-      }
-
-      .word-block {
-        text-align: center;
-        padding: 2rem;
-        margin: 1rem;
-        width: 20%;
-        border: 2px dashed orange;
-        cursor: pointer;
-        transition: 0.15s all;
-      }
-      .word-block:hover {
-        transform: scale(1.1);
-      }
-
-      .scale-it {
-        transform: scale(1.2) !important;
-      }
-
-      .button-container {
-        margin-top: 2rem;
-        text-align: center;
-      }
-      button {
-        background-color: orange;
-        border: none;
-        padding: 1rem 2rem;
-        color: black;
-        cursor: pointer;
-        box-shadow: 1px 4px 2px rgba(155, 155, 155, 0.2);
-      }
-
-      button:active {
-        transform: translateY(1px);
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <div class="title">
-        <h1>Please choose the word you don't want me to say.</h1>
-        <p>* you can only choose one</p>
-      </div>
-
-      <div class="words-container">
-        <div class="word-block">
-          <p>ya zngy</p>
-        </div>
-        <div class="word-block">
-          <p>kosk</p>
-        </div>
-        <div class="word-block">
-          <p>sharo5an</p>
-        </div>
-      </div>
-
-      <div class="button-container">
-        <button>Submit</button>
-      </div>
-    </div>
-
-    <script>
-      let selectedWord = "";
-      document.querySelectorAll(".word-block").forEach(block => {
-        block.addEventListener("click", e => {
-          document.querySelectorAll(".word-block").forEach(b => {
-            b.classList.remove("scale-it");
-            selectedWord = "";
-          });
-          e.currentTarget.classList.add("scale-it");
-          selectedWord = e.currentTarget.innerText;
-        });
-      });
-
-      document.querySelector("button").addEventListener("click", function () {
-        if (selectedWord) {
-          let data = confirm("Print receipt");
-          if (!data) {
-            alert("please reload the page and try again.");
-          } else {
-            alert(
-              "Thank you, after you click ok. the receipt will be printed. send it to hazem and he'll know what to do."
-            );
-            let oldData = document.body.innerHTML;
-            document.body.innerHTML = `
-              <pre>
-                I confirm that I choose the word ${selectedWord} as the word I don't want you to say again.
-                Please pay me 2200LE for all the damage you have caused me for saying this word.
-
-                Thank you,
-                Abdullah ayman.
-              </pre>
-            
-            `;
-            window.print();
-
-            // location.reload();
-          }
-        } else {
-          alert("e5tar 7aga ya zngy.");
-        }
-      });
-    </script>
-  </body>
-</html>
+<center>
+  <img src="https://i.stack.imgur.com/1dpmw.gif" width="531" height="387" alt="" />
+  <h1>Just Buy Bitcoin.</h1>
+</center>
